lab1/Test/L1-A-12-87.output
Error Type B at Line 3
Error Type A at Line 4
Error Type A at Line 8
Error Type B at Line 12
Error Type B at Line 31
Error Type B at Line 32
Error Type A at Line 33
