lab1/Test/L1-A-12-87.cmm
struct {
}n ( ) {
  struct XnxYrGwcMe GNNOCLK , ;
  return H5xw7HS8gEgUMPDS5MYu ;^
}
struct Ry8ZCYtXbqxX8KQKwwUE ;
struct lwrJSzkdaFTbdfKE myjUeDkreOUkADHQA5sA ( int 
  CXVxs7yNal36s1ef ) @{
  if ( jqVbOH5 )   U1sut3odfNrN0EDE ;
else   if ( sZrF0nzNImuUzrCfWF0g )   while ( joGp5EM9QOf 
    ) {
    float uCa38eYznBLAr = = Uoag9YZ && F6qnc9OuXN_BY 
      + AosPuMuwBQ [ gldK || wnZ < TjzF1DgSLsLriQkndS - 
      xr5OW2n499z * ! tdCKv9Q ( ZKhCeFSoK2pWCHb , oFKTJLy7WZbLkngRpSn 
      || CbPqbkcBV == ( GU = WJDQGcf33JeS && z7t5OuFVUi8if5n0 
      != is_BeTt8bYZmsE * ! - mirESyeh4gs8J55Am ( qH9kSd7YhAKT 
      = P3 && xaGlOLM4BW9Yj6HsdhC <= UzIWtI6jNUQ0yhir7zO 
      > FmWULlF3 ) - ! - 1262366401 >= - - - 121265837.1065987426 
      ) ) / ! - ! eQJUe_0a ( ) . UhNTHmL_HIcOun7R5Z ] ;
  }


}
int CtCmQRl4yyC , r_d90iKLzUVhniA8Pg1T [ 260024588 
  ] 

;
struct tyuYHR5eFb {
};
int ;
int PeNdEmd99YRmg ( int hw45L3 , int ) {
  ;
  if ( _r9M6NGyod #)   y0EU9VMs5 ;
else   jX ;

}
